--- a/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
@@ -1,5 +1,5 @@
-$500$ & $1$ & $-17.05$ & $+12.9$ & $\mathbf{-22.97}$ \\ 
-$1000$ & $2.25$ & $\mathbf{-3.53}$ & $+23.54$ & $-1.97$ \\ 
-$5000$ & $\mathbf{14.8}$ & $+26.25$ & $+86.51$ & $+93.24$ \\ 
-$10000$ & $\mathbf{30.93}$ & $+41.96$ & $+128.33$ & $+163.9$ \\ 
-$25000$ & $\mathbf{72.03}$ & $+34.27$ & $+121.7$ & $+132.63$ \\ 
+$500$ & $0.81$ & $+1.69$ & $+38.4$ & $\mathbf{-5.57}$ \\ 
+$1000$ & $\mathbf{1.91}$ & $+13.57$ & $+45.44$ & $+15.41$ \\ 
+$5000$ & $\mathbf{13.54}$ & $+38.05$ & $+103.94$ & $+111.31$ \\ 
+$10000$ & $\mathbf{28.45}$ & $+54.37$ & $+148.3$ & $+186.97$ \\ 
+$25000$ & $\mathbf{64.44}$ & $+50.09$ & $+147.82$ & $+160.03$ \\ 
