--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -214,46 +214,46 @@ Karlsruhe, den 22.12.2017
 \begin{abstract}
 \centerline{\textbf{Abstract}}
 
-All state-of-the-art multilevel hypergraph partitioner implements the \emph{FM} 
-heuristic \cite{fiduccia1988linear} to improve a balanced $k$-way partition. 
-In each step, the \emph{FM} algorithm moves a node with maximum \emph{gain} 
-from its current block to the other block according to an objective
-function. The \emph{gain} of moving a hypernode mainly depends on 
-the state of all incident hyperedges. Therefore, \emph{FM} only incorporates
-\emph{local} information about the problem structure and performs a move
-\emph{greedily}. Consequently, the solution quality heavily depends on the 
-\emph{initial partition} and the quality of the \emph{coarsening} algorithm \cite{dutt1997vlsi}.
-Moreover, if we have a large number of moves with equal gain, the quality of the solution 
-is a result of random choices made within the algorithm
-\cite{krishnamurthy1984improved,mann2014formula}. Especially for large hyperedges, we often
-have many moves of vertices which gain is equal to zero if, e.g., the \emph{cut} metric is the objective function. \\
-The well-known \emph{max-flow min-cut} theorem \cite{ford1956maximal} establish an analogy
-between the \emph{global} minimum cut of a network separating two vertices and the maximum flow between
-them. The technique incorporates \emph{global} information about the problem structure and
-is not \emph{move}-based. Therefore, utilizing such techniques as \emph{local search}
-heuristic would overcome the drawbacks of the \emph{FM} algorithm.\\
-In this thesis, we present an alternative 
-\emph{local search} algorithm based on \emph{Max-Flow-Min-Cut}
-computations for balanced direct $k$-way hypergraph partitioning.
-We integrate our framework into the $n$-level hypergraph partitioner \emph{KaHyPar} \cite{heuer2017improving}. 
-The framework is inspired by the work of Sanders and Schulz \cite{sanders2011engineering} who
-successfully showed that \emph{flow}-based \emph{local search} in combination with the \emph{FM}
-algorithm significantly improves the quality of partitions in a multilevel graph partitioner.
+In this thesis, we introduce an framework based on \emph{Max-Flow-Min-Cut}
+computations for improving a balanced direct $k$-way partition of a hypergraph.
+Currently, \emph{local search} algorithms based on the \emph{FM} idea \cite{fiduccia1988linear} 
+are used in all state-of-the-art multilevel hypergraph partitioner. Such \emph{move}-based
+heuristics have the disadvantage that they only incorporate \emph{local} informations about the problem 
+structure and in case of ties, the quality mainly depends on random choices made within 
+the algorithm \cite{dutt1997vlsi,krishnamurthy1984improved,mann2014formula}.
+\emph{Flow}-based approaches are not \emph{move}-based and able to find a \emph{global}
+minimum cut separating to vertices $s$ and $t$ \cite{ford1956maximal}.
+Therefore, utilizing such techniques as \emph{refinement} heuristic would 
+overcome the drawbacks of the \emph{FM} algorithm.\\
+Our framework is inspired by the work of Sanders and Schulz \cite{sanders2011engineering} who
+successfully integrate a \emph{flow}-based refinement algorithm in a multilevel graph partitioner.
 We generalize many ideas of them such that they are applicable in the multilevel hypergraph 
-partitioning context. We present several techniques to sparsify the state-of-the-art hypergraph 
-flow network representation \cite{lawler1973}. The theoretical results are of independent interest because they
-can also be applied to general flow networks. Our experiments indicate
-that maximum flow algorithms are up to a factor of $3$ faster on our network in practice.
-Further, we show how to configure a flow problem on a subhypergraph such that a 
-\emph{Max-Flow-Min-Cut} computation improves a balanced $k$-way partition. \\
-We tested our new approach
-on a large benchmark set with $3222$ instances. In comparison to $5$ different systems, 
+partitioning context. We develop several techniques to sparsify the flow network of 
+a hypergraph, which reduces the resulting problem size on average by a factor of $2$ compared to
+the state-of-the-art representation \cite{lawler1973}. Additionally, we show how to configure
+a flow problem on a subhypergraph such that the quality achievable with a \emph{Max-Flow-Min-Cut}
+computation is significantly better than with the modeling approach of Sanders and Schulz.
+Finally, we integrate our work as refinement strategy into the $n$-level hypergraph 
+partitioner \emph{KaHyPar} \cite{heuer2017improving}. \\
+We tested our framework on a large benchmark set with $3222$ instances. In comparison to $5$ different systems, 
 our new configuration outperforms the tested state-of-the-art hypergraph partitioner on $70\%$ 
 of the instances. In comparison to the latest version of \emph{KaHyPar}, our new approach 
-produces $2\%$ better quality while only incurring a performance slowdown by a factor of $2$. 
+produces $2.4\%$ better quality while only incurring a performance slowdown by a factor of $2$. 
 Moreover, our partitioner has a comparable running time to the direct $k$-way version 
 of \emph{hMetis} and outperforms it on $82\%$ of the benchmarks.
 
+%All variations
+%of the algorithm have in common that they greedily \emph{move} (hyper)nodes between
+%blocks of a partition according to an associated \emph{gain}, which value depends on
+%the \emph{local} structure around an vertex. The \emph{FM} algorithm is often criticized,
+%because it only incorporates \emph{local} informations about the problem structure and
+%in case of ties, the quality mainly depends on random choices made within the algorithm
+%\cite{dutt1997vlsi,krishnamurthy1984improved,mann2014formula}.
+%The framework is inspired by the work of Sanders and Schulz \cite{sanders2011engineering} who
+%successfully showed that \emph{flow}-based refinement in combination with the \emph{FM}
+%algorithm significantly improves the quality of partitions in a multilevel graph partitioner.
+%We generalize many ideas of them such that they are applicable in the multilevel hypergraph 
+%partitioning context.
 \end{abstract}
 
 %\selectlanguage{german}
