--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -321,6 +321,7 @@ I could continue every morning with the same energy and passion as the day befor
 \renewcommand\subsectionmark[1]{\markright{\thesubsection\quad\MakeUppercase{#1}}}
 
 % Inhaltsverzeichnis
+\setcounter{tocdepth}{2} 
 \tableofcontents
 
 \clearpage
